--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,7 @@
-
-.font {
-	
-	
-	font-family: "helvetica" "lucida" sans-serif;
-	font-size: 12px;
-	font-weight: 100px;
-	line-height: 10px;
-	font:
-
-
+head {
+color: #4aaaa5;
+font-family: 'Georgia' , Times, Times New Roman, serif; 
 
 }
+
+
