--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,46 @@
-head {
-color: #4aaaa5;
-font-family: 'Georgia' , Times, Times New Roman, serif; 
-
+.container{
+	width: 960px
 }
 
+.main section{
+
+	width: 650px;
+	float: left;
+}
+
+header{
+
+	color: #4aaaa5;
+	font-family: 'Georgia' , Times, Times New Roman, serif; 
+}
+
+body{
+
+	color: #777777;
+	content background: #ffffff
+	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	border-color: #dddddd;
+}
+
+.sidebar {
+
+	width: 270px;
+	
+	
+}
+
+.mainheader {
+
+	background: #4aaaa5;
+	color: #ffffff;
+	border-color: #cccccc;
+}
+
+footer{
+
+	background: #666666;
+	color: white;
+	font-size: 10px
+	width: 10px
+}
 
